back-service.yaml
apiVersion: v1
kind: Service


metadata:

 name: backend

 namespace: vprofile


spec:

 selector:

  app: backend


 ports:

 - port: 8080
