mem-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc01
  namespace: vprofile
  labels:
    app: mc01
    tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc01
  template:
    metadata:
      labels:
        app: mc01
        tier: cache
    spec:
      containers:
        - name: mc01
          image: memcached:latest
          ports:
            - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: mc01
  namespace: vprofile
  labels:
    app: mc01
spec:
  selector:
    app: mc01
  ports:
    - port: 11211
      targetPort: 11211
