mem-service.yaml
apiVersion: v1
kind: Service

metadata:
 name: memcached
 namespace: vprofile

spec:

 selector:
  app: memcached

 ports:
 - port: 11211
