mysql-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db01
  namespace: vprofile
  labels:
    app: db01
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db01
  template:
    metadata:
      labels:
        app: db01
        tier: db
    spec:
      containers:
        - name: db01
          image: esraaghazal/vprofile-db:1.0
          ports:
            - containerPort: 3306
          livenessProbe:
            exec:
              command:
                ["mysqladmin", "ping", "-h", "localhost", "-pvprodbpass"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            exec:
              command:
                ["mysqladmin", "ping", "-h", "localhost", "-pvprodbpass"]
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
      volumes:
        - name: db-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db01
  namespace: vprofile
  labels:
    app: db01
spec:
  selector:
    app: db01
  ports:
    - port: 3306
      targetPort: 3306
