rmq-service.yaml
apiVersion: v1
kind: Service

metadata:

 name: rabbitmq

 namespace: vprofile


spec:

 selector:
  app:rabbitmq


 ports:

 - name: amqp
   port: 5672

 - name: http
   port: 15672
